# machineLearning

./: Module8_DeepLearning.ipynb  README.md  README.txt
.ipynb_checkpoints/: README-checkpoint.md
.ipynb_checkpoints/03-Classification/: Homework03.ipynb
01-Intro/: 01-Intro.md  Homework.ipynb  Homework_01.ipynb  README.md
01-Intro/.ipynb_checkpoints/: Homework_01-checkpoint.ipynb
02-Regression/: Homework2.ipynb  Homework_02.ipynb  Practice.ipynb  Scikit.ipynb  Untitled.ipynb
02-Regression/.ipynb_checkpoints/: Homework2-checkpoint.ipynb
03-Classification/: Homework03-Final.ipynb  Homework03.ipynb  Homework03.py  Homework03_Final.ipynb
03-Classification/.ipynb_checkpoints/: HW03-checkpoint.ipynb  Homework03-checkpoint.ipynb
04-EvaluationMetrics/: Homework04.ipynb
05-DeployingMLModels/: Homework05.ipynb  main.py  marketing.py  ping.py  predict.py  pyproject.toml  train.py  workshop-uv-fastapi.ipynb
05-DeployingMLModels/05-HW/: convert.py  dockerfile  pyproject.toml
05-DeploymentHW/: README.md  convert.py  dockerfile  pyproject.toml
06-Trees/: HW_06.ipynb
08-DeepLearning/: Module8_DeepLearning.ipynb  Practice_Keras.ipynb  README.md  TensorFlowPractice.ipynb
09-Serverless/: README.md
09-Serverless/sklearn/: Dockerfile  HW9Serverless.ipynb  invoke.py  lambda_function.py  publish.sh  pyproject.toml
10-kubernetes/: README.md
10-kubernetes/homework/: deployment.yaml  service.yaml
10-kubernetes/service/: pyproject.toml  test.py
AI-Dev-Tools/: README.md
AI-Dev-Tools/01-Overview/django_todo_app/: README.md  db.sqlite3  pyproject.toml
(+10 files in other folders)
