[project]
name = "05-deployingmlmodels"
version = "0.1.0"
description = "Churn Prediction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = [
    "05-HW",
]
